Add getDependencies logic for Tonic Initializr
